Don't roll cruiser check if it's already been unlocked
The cruiser starts off as locked. As long as it's still locked (cruiser_unlocked == false), we can try a roll. Because it will always be unlocked in round 3 (100% chance), we don't have to worry about rounds 4+ or tell the program to stop rolling for cruisers explicitly.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 cruiser_text = {
   roll_failed: "The cruiser remains locked.",
-  roll_succeeded: "The cruiser has been unlocked!"
+  roll_succeeded: "The cruiser is unlocked!"
 }
 
 cruiser_percentages = {
@@ -11,6 +11,8 @@ cruiser_percentages = {
   3: 1
 }
 
+cruiser_unlocked = false
+
 round_number = 0
 
 
@@ -18,10 +20,13 @@ function start_round() {
   round_number = round_number + 1
   document.getElementById("round").innerText = "Round " + round_number
   
-  if ( Math.random() < cruiser_percentages[round_number] ) {
-    document.getElementById("output").innerText = cruiser_text["roll_succeeded"]
-  } else {
-    document.getElementById("output").innerText = cruiser_text["roll_failed"]
+  if ( cruiser_unlocked == false ) {
+    if ( Math.random() < cruiser_percentages[round_number] ) {
+      document.getElementById("output").innerText = cruiser_text["roll_succeeded"]
+      cruiser_unlocked = true
+    } else {
+      document.getElementById("output").innerText = cruiser_text["roll_failed"]
+    }
   }
 }
 
