First batch of round bonuses

--- a/index.html
+++ b/index.html
@@ -39,17 +39,52 @@ stock_double_chance = 10
 current_bonus = "No bonus"
 
 bonus_text = {
-  1: ["A",
-      "B",
-      "C"],
-  2: ["D",
-      "E",
-      "F"],
-  3: [],
-  4: [],
-  5: [],
-  6: [],
-  7: []
+  1: ["Each player earns $3.",
+      "Each player gains a free Trimotor.",
+      "Each player draws a directive card.",
+      "Starting with the first player, each player may pay $3 to place an airport.",
+      "At the end of the round, Pan Am expands once along the Asia-Pacific route.",
+      "At the end of the round, Pan Am expands once along the European route.",
+      "At the end of the round, Pan Am expands once along the South American route.",],
+  2: ["Each player earns $4.",
+      "Each player gains a free Clipper or Trimotor.",
+      "Increase each player's income by 2.",
+      "When selling routes this round, treat the route bonus as being 1 rank higher.",
+      "Each player draws a directive card.",
+      "At the end of the round, Pan Am expands once along the Asia-Pacific route.",
+      "At the end of the round, Pan Am expands once along the European route.",
+      "At the end of the round, Pan Am expands once along the South American route.",],
+  3: ["Each player may sell a plane for $5.",
+     "Each player gains a free Clipper or Trimotor."
+      "Increase each player's income by 2.",
+      "Each player draws two directive cards.",
+      "At the end of the round, each player may sell a route to Pan Am.",
+      "At the end of the round, Pan Am expands once along each of the Asia-Pacific, South American, and European routes.",
+      "At the end of the round, Pan Am expands twice along the Asia-Pacific route.",
+      "At the end of the round, Pan Am expands twice along the European route.",
+      "At the end of the round, Pan Am expands twice along the South American route.",],
+     ],
+  4: ["Each player earns $8",
+      "Each player gains a free Cruiser or plane of lesser value."
+      "Each player draws two directive cards.",
+      "Starting with the first player, each player may trade in one plane for two of the same plane of lesser value.",
+      "Starting with the first player, each player may purchase an available plane of any value by selling stock at its current value +$2 per share.",
+      "At the end of the round, Pan Am expands once along each of the Asia-Pacific, South American, and European routes.",
+      "At the end of the round, Pan Am expands twice along the Asia-Pacific route.",
+      "At the end of the round, Pan Am expands twice along the European route.",
+      "At the end of the round, Pan Am expands twice along the South American route.",
+     ],
+  5: ["Each player gains a free Cruiser or plane of lesser value.",
+      "Starting with the first player, each player may purchase a plane of any value by selling stock at its current value +$2 per share.",
+     ],
+  6: ["Each player gains a free Cruiser or plane of lesser value.",
+      "Starting with the first player, each player may sell a route to Pan Am.",
+      "Each player with a Jet must sell it for $10. Lock the Jet for the rest of the game. Jets cannot be gained by any means.",],
+  7: ["Each player gains a free plane of any value.",
+     "Each player draws three directive cards.",
+     "Starting with the first player, each player may move one of their existing airports. Repeat this until no player moves an airport. An airport may not be moved twice this way.",
+     "Starting with the first player, each player may remove one Pan Am purchase marker from the board.",
+     "At the end of the round, Pan Am expands twice along each of the Asia-Pacific, South American, and European routes."]
 }
 
 
