--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ bonus_text = {
      ],
   6: ["Each player gains a free Cruiser or plane of lesser value.",
       "Starting with the first player, each player may sell a route to Pan Am.",
-      "Each player with a Jet must sell it for $10. Lock the Jet for the rest of the game. Jets cannot be gained by any means.",],
+      "Each player with a Jet must sell it for $10. Lock the Jet for the rest of the game. Jets cannot be gained by any means."],
   7: ["Each player gains a free plane of any value.",
      "Each player draws three directive cards.",
      "Starting with the first player, each player may move one of their existing airports. Repeat this until no player moves an airport. An airport may not be moved twice this way.",
