--- a/index.html
+++ b/index.html
@@ -75,8 +75,7 @@ bonus_text = {
       "At the end of the round, Pan Am expands twice along the South American route.",
      ],
   5: ["Each player gains a free Cruiser or plane of lesser value.",
-      "Starting with the first player, each player may purchase a plane of any value by selling stock at its current value +$2 per share.",
-     ],
+      "Starting with the first player, each player may purchase a plane of any value by selling stock at its current value +$2 per share."],
   6: ["Each player gains a free Cruiser or plane of lesser value.",
       "Starting with the first player, each player may sell a route to Pan Am.",
       "Each player with a Jet must sell it for $10. Lock the Jet for the rest of the game. Jets cannot be gained by any means."],
