--- a/index.html
+++ b/index.html
@@ -72,8 +72,7 @@ bonus_text = {
       "At the end of the round, Pan Am expands once along each of the Asia-Pacific, South American, and European routes.",
       "At the end of the round, Pan Am expands twice along the Asia-Pacific route.",
       "At the end of the round, Pan Am expands twice along the European route.",
-      "At the end of the round, Pan Am expands twice along the South American route.",
-     ],
+      "At the end of the round, Pan Am expands twice along the South American route."],
   5: ["Each player gains a free Cruiser or plane of lesser value.",
       "Starting with the first player, each player may purchase a plane of any value by selling stock at its current value +$2 per share."],
   6: ["Each player gains a free Cruiser or plane of lesser value.",
