--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ bonus_text = {
       "At the end of the round, Pan Am expands twice along the South American route.",],
      ],
   4: ["Each player earns $8",
-      "Each player gains a free Cruiser or plane of lesser value."
+      "Each player gains a free Cruiser or plane of lesser value.",
       "Each player draws two directive cards.",
       "Starting with the first player, each player may trade in one plane for two of the same plane of lesser value.",
       "Starting with the first player, each player may purchase an available plane of any value by selling stock at its current value +$2 per share.",
