--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ bonus_text = {
       "Starting with the first player, each player may pay $3 to place an airport.",
       "At the end of the round, Pan Am expands once along the Asia-Pacific route.",
       "At the end of the round, Pan Am expands once along the European route.",
-      "At the end of the round, Pan Am expands once along the South American route.",],
+      "At the end of the round, Pan Am expands once along the South American route."],
   2: ["Each player earns $4.",
       "Each player gains a free Clipper or Trimotor.",
       "Increase each player's income by 2.",
