--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ bonus_text = {
       "Each player draws a directive card.",
       "At the end of the round, Pan Am expands once along the Asia-Pacific route.",
       "At the end of the round, Pan Am expands once along the European route.",
-      "At the end of the round, Pan Am expands once along the South American route.",],
+      "At the end of the round, Pan Am expands once along the South American route."],
   3: ["Each player may sell a plane for $5.",
      "Each player gains a free Clipper or Trimotor."
       "Increase each player's income by 2.",
