--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ bonus_text = {
       "At the end of the round, Pan Am expands once along the European route.",
       "At the end of the round, Pan Am expands once along the South American route."],
   3: ["Each player may sell a plane for $5.",
-     "Each player gains a free Clipper or Trimotor."
+     "Each player gains a free Clipper or Trimotor.",
       "Increase each player's income by 2.",
       "Each player draws two directive cards.",
       "At the end of the round, each player may sell a route to Pan Am.",
