--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ bonus_text = {
       "At the end of the round, Pan Am expands once along each of the Asia-Pacific, South American, and European routes.",
       "At the end of the round, Pan Am expands twice along the Asia-Pacific route.",
       "At the end of the round, Pan Am expands twice along the European route.",
-      "At the end of the round, Pan Am expands twice along the South American route.",],
+      "At the end of the round, Pan Am expands twice along the South American route."],
   4: ["Each player earns $8",
       "Each player gains a free Cruiser or plane of lesser value.",
       "Each player draws two directive cards.",
