--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ bonus_text = {
       "PERMANENT PRESENCE | When selling a route this round, your income does not decrease.",
       "TRAVEL NETWORK | Destination cards this round can instead be used for any adjacent city."],
   5: ["UNEXPECTED AIRCRAFT SURPLUS | Each player gains a free Cruiser or plane of lesser value.",
-      "STOCK BUYBACKS | Starting with the first player, each player may purchase a plane of any value by selling stock at its current value +$2 per share."],
+      "STOCK BUYBACKS | Starting with the first player, each player may purchase a plane of any value by selling stock at its current value +$2 per share.",
       "TRAVEL BOOM | Income is doubled this round.",
       "GLOBAL EXPANSION | At the end of the round, Pan Am expands once along each of the Asia-Pacific, South American, and European routes.",
       "BIG APAC PUSH | At the end of the round, Pan Am expands twice along the Asia-Pacific route.",
