--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ bonus_text = {
      "PAN AM GOLDEN AGE | Set the stock price to $11.",
      "PAN AM BANKRUPTCY | Set the stock price to $3.",
      "MAJOR GLOBAL EXPANSION | At the end of the round, Pan Am expands twice along each of the Asia-Pacific, South American, and European routes, and each player may sell an additional route to Pan Am. Ignore the regular Expansion die rolls this round.",
-     "GLOBAL CORPORATION | If a player sells the last route necessary to complete any of the Asia-Pacific, South American, and/or European routes this round, that player gains $20.]
+     "GLOBAL CORPORATION | If a player sells the last route necessary to complete any of the Asia-Pacific, South American, and/or European routes this round, that player gains $20."]
 }
 
 
