balance and fixes

--- a/index.html
+++ b/index.html
@@ -45,12 +45,13 @@ bonus_text = {
       "INFRASTRUCTURE INVESTMENT | Each player who does not claim a route this round may pay place a free airport.",
       "APAC PUSH | At the end of the round, Pan Am expands once along the Asia-Pacific route.",
       "EUROPEAN PUSH | At the end of the round, Pan Am expands once along the European route.",
+      "HEADQUARTERS RELOCATION | Start the game from the opposite end of the Pan-Am expansion route. If the game started in Miami, start the game in Rome instead, and vice versa.",
       "SOUTH AMERICAN PUSH | At the end of the round, Pan Am expands once along the South American route."],
   2: ["QUARTERLY BONUS | Each player earns $4.",
       "AIRCRAFT SURPLUS | Each player gains a free Clipper or Trimotor.",
       "UPGRADE | Each player may upgrade a plane in their fleet.",
       "PROFIT BOON | Increase each player's income by 2.",
-      "LUXURY TRAVEL | When selling routes this round, treat the route bonus as being 1 rank higher.",
+      "LUXURY TRAVEL | When selling routes this round, treat the route bonus as being 1 rank higher. (Max. rank 4.)",
       "STANDARD ASSIGNMENT | Each player draws a Directive card.",
       "ROUTE EXPANSION | Each player draws a Destination card.",
       "GROUND INFRASTRUCTURE | Starting with the first player, each player may pay $3 to place an airport.",
@@ -65,11 +66,10 @@ bonus_text = {
      "STANDARD ASSIGNMENT | Each player draws a Directive card.",
      "ROUTE EXPANSION | Each player draws a Destination card.",
      "CHARTERED FLIGHTS | At the end of the round, each player may sell a route to Pan Am.",
-     "GLOBAL EXPANSION | At the end of the round, Pan Am expands once along each of the Asia-Pacific, South American, and European routes.",
-     "BIG APAC PUSH | At the end of the round, Pan Am expands twice along the Asia-Pacific route.",
-     "BIG EUROPEAN PUSH | At the end of the round, Pan Am expands twice along the European route.",
-     "BIG SOUTH AMERICAN PUSH | At the end of the round, Pan Am expands twice along the South American route.",
-     "PERMANENT PRESENCE | When selling a route this round, do not commensurately decrease your income.",
+     "APAC PUSH | At the end of the round, Pan Am expands once along the Asia-Pacific route.",
+     "EUROPEAN PUSH | At the end of the round, Pan Am expands once along the European route.",
+     "SOUTH AMERICAN PUSH | At the end of the round, Pan Am expands once along the South American route.",
+     "PERMANENT PRESENCE | When selling routes this round, player income does not decrease.",
      "TRAVEL NETWORK | Destination cards this round can instead be used for any adjacent city."],
   4: ["ANNUAL BONUS | Each player earns $5",
       "UPGRADE | Each player may upgrade a plane in their fleet.",
@@ -77,41 +77,39 @@ bonus_text = {
       "ROUTE EXPANSION | Each player draws a Destination card.",
       "TRADE-IN | Starting with the first player, each player may trade in a Clipper, Cruiser, or Jet for two of the same plane of any lesser size.",
       "STOCK BUYBACKS | Starting with the first player, each player may purchase an available plane of any value by selling stock at its current value +$2 per share.",
-      "GLOBAL EXPANSION | At the end of the round, Pan Am expands once along each of the Asia-Pacific, South American, and European routes.",
-      "BIG APAC PUSH | At the end of the round, Pan Am expands twice along the Asia-Pacific route.",
-      "BIG EUROPEAN PUSH | At the end of the round, Pan Am expands twice along the European route.",
-      "BIG SOUTH AMERICAN PUSH | At the end of the round, Pan Am expands twice along the South American route.",
+      "APAC PUSH | At the end of the round, Pan Am expands once along the Asia-Pacific route.",
+      "EUROPEAN PUSH | At the end of the round, Pan Am expands once along the European route.",
+      "SOUTH AMERICAN PUSH | At the end of the round, Pan Am expands once along the South American route.",
       "COMPLETED ASSIGNMENTS | Whenever a player draws a Directive card this round, they may sell a route to Pan Am.",
-      "PERMANENT PRESENCE | When selling a route this round, your income does not decrease.",
-      "TRAVEL NETWORK | Destination cards this round can instead be used for any adjacent city."],
+      "PERMANENT PRESENCE | When selling routes this round, player income does not decrease.",
+      "TRAVEL NETWORK | Whenever a player places a route this round, they draw a destination card."],
   5: ["UNEXPECTED AIRCRAFT SURPLUS | Each player gains a free Cruiser or plane of lesser value.",
       "STOCK BUYBACKS | Starting with the first player, each player may purchase a plane of any value by selling stock at its current value +$2 per share.",
       "TRAVEL BOOM | Income is doubled this round.",
-      "GLOBAL EXPANSION | At the end of the round, Pan Am expands once along each of the Asia-Pacific, South American, and European routes.",
-      "BIG APAC PUSH | At the end of the round, Pan Am expands twice along the Asia-Pacific route.",
-      "BIG EUROPEAN PUSH | At the end of the round, Pan Am expands twice along the European route.",
-      "BIG SOUTH AMERICAN PUSH | At the end of the round, Pan Am expands twice along the South American route.",
-      "COMPLETED ASSIGNMENTS | Whenever a player draws a Directive card this round, they may sell a route to Pan Am.",
-      "PERMANENT PRESENCE | When selling a route this round, your income does not decrease.",
+      "APAC PUSH | At the end of the round, Pan Am expands once along the Asia-Pacific route.",
+      "EUROPEAN PUSH | At the end of the round, Pan Am expands once along the European route.",
+      "SOUTH AMERICAN PUSH | At the end of the round, Pan Am expands once along the South American route.",
+      "PERMANENT PRESENCE | When selling routes this round, player income does not decrease.",
+      "TRADE-IN | Starting with the first player, each player may trade in a Clipper, Cruiser, or Jet for two of the same plane of any lesser size.",
       "JET PROTOTYPE | Unlock the Jet. If it is already unlocked, Jets costs $6 less to buy this round."],
   6: ["UNEXPECTED AIRCRAFT SURPLUS | Each player gains a free Cruiser or plane of lesser value.",
       "COMMERCIAL FLIGHTS | Starting with the first player, each player may sell a route to Pan Am.",
-      "GLOBAL EXPANSION | At the end of the round, Pan Am expands once along each of the Asia-Pacific, South American, and European routes.",
-      "BIG APAC PUSH | At the end of the round, Pan Am expands twice along the Asia-Pacific route.",
-      "BIG EUROPEAN PUSH | At the end of the round, Pan Am expands twice along the European route.",
-      "BIG SOUTH AMERICAN PUSH | At the end of the round, Pan Am expands twice along the South American route.",
+      "APAC PUSH | At the end of the round, Pan Am expands once along the Asia-Pacific route.",
+      "EUROPEAN PUSH | At the end of the round, Pan Am expands once along the European route.",
+      "SOUTH AMERICAN PUSH | At the end of the round, Pan Am expands once along the South American route.",
+      "PERMANENT PRESENCE | When selling a route this round, your income does not decrease.",
       "TRAVEL BOOM | Income is doubled this round.",
-      "SERVICE REROUTING | Starting with the first player, each player may move one of their existing airports. Repeat this until no player moves an airport. An airport may not be moved twice this way.",
-      "JET PROTOTYPE FAILURE | Each player with a Jet must sell it for $10. Lock the Jet for the rest of the game. Jets cannot be gained by any means."],
+      "TRADE-IN | Starting with the first player, each player may trade in a Clipper, Cruiser, or Jet for two of the same plane of any lesser size.",
+      "SERVICE REROUTING | Starting with the first player, each player may move one of their existing airports."],
   7: ["OVERWHELMING AIRCRAFT SURPLUS | Each player gains a free plane of any value.",
      "MAJOR ASSIGNMENT | Each player draws three Directive cards.",
-     "SERVICE REROUTING | Starting with the first player, each player may move one of their existing airports. Repeat this until no player moves an airport. An airport may not be moved twice this way.",
+     "SERVICE REROUTING | Starting with the first player, each player may move one of their existing airports.",
      "SERVICE CUTBACKS | Starting with the first player, each player may remove one Pan Am purchase marker from the board. Those routes can be claimed again one more time this game.",
      "TRAVEL BOOM | Income is doubled this round.",
      "PAN AM GOLDEN AGE | Set the stock price to $11.",
      "PAN AM BANKRUPTCY | Set the stock price to $3.",
-     "MAJOR GLOBAL EXPANSION | At the end of the round, Pan Am expands twice along each of the Asia-Pacific, South American, and European routes, and each player may sell an additional route to Pan Am. Ignore the regular Expansion die rolls this round.",
-     "GLOBAL CORPORATION | If a player sells the last route necessary to complete any of the Asia-Pacific, South American, and/or European routes this round, that player gains $20."]
+     "GLOBAL EXPANSION | At the end of the round, Pan Am expands once along each of the Asia-Pacific, South American, and European routes, and each player may sell an additional route to Pan Am.",
+     "GLOBAL CORPORATION | If a player sells the last route necessary to complete any of the Asia-Pacific, South American, and/or European routes this round, that player earns $20."]
 }
 
 
